# SnapPipe

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: SECURITY-MODEL.md
examples/: relay.sample.toml
src/: lib.rs  main.rs  nonce_store.rs  quic.rs  rate_limit.rs  relay.rs  session.rs  sync.rs  trust.rs
src/quic/: endpoint.rs  mod.rs
tests/: integration_trust_sync.rs  quic_e2e.rs
