[package]
name = "snappipe"
version = "0.1.0"
edition = "2024"
description = "Identity-based QUIC transport toolkit with signed tickets and self-hosted relay scaffolding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/louzt/SnapPipe"
readme = "README.md"
keywords = ["quic", "p2p", "tickets", "relay", "networking"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64ct = { version = "1.8", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
